Small fix the the signup box overflow - removed min width property on smaller screens

--- a/css/main.css
+++ b/css/main.css
@@ -190,7 +190,7 @@ main > .intro {
 aside.col {
     border: 2px solid black;
     padding: 7px;
-    /*max-width: 325px;*/
+    max-width: 500px;
 }
 
 .signup > h1 {
